@@ -23,6 +23,7 @@ Mejorada temporización en Mac usando temporizador nativo
 Mejoado logo de marca de agua: puede mostrarse sólo al cargar/grabar, puede cambiar colores al cargar/grabar
 Mejorado Selector de Archivos: permitir usar ruta a una imagen montada FAT en todos los casos
 Mejorada ventana de  Visual Cassette Tape window: soportar también cinta estándar
+Mejorada opción de Custom rom agregando una opción para resetear la máquina
 
 Mejorado AY Player:
 - Permitir cargar lista de reproducción del AY Player
